--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
 
     implementation 'com.kyanogen.signatureview:signature-view:1.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
