--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.kyanogen.signatureview:signature-view:1.0'
 
     implementation 'com.github.gcacace:signature-pad:1.2.1'
+
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 }
