--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     implementation 'com.github.gcacace:signature-pad:1.2.1'
 
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
