--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
 
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    implementation "com.android.support:support-compat:30.0.0"
+
 }
